--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Chamakitos Park</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">INICIO</a></li>
+                <li><a href="#">SERVICIOS</a></li>
+                <li><a href="#">UBICACI&Oacute;N</a></li>
+                <li><a href="#">CONTACTO</a></li>
+                <li><a href="#">CALIF&Iacute;CANOS</a></li>
+            </ul>
+        </nav>
+        <div id="logo">
+            <img src="" alt="">
+        </div>
+    </header>
 </body>
 </html>
