agregue section de incio

--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
             <img src="" alt="">
         </div>
     </header>
+    <section id="inicio">
+        <div id="titulo">
+            <h1>Sal&oacute;n de Eventos</h1>
+            <h3>Aunt&eacute;nticamente <br> Mexicano, natural <br>
+            y divertido</h2>
+        </div>
+    </section>
 </body>
 </html>
