--- a/index.html
+++ b/index.html
@@ -28,5 +28,16 @@
             y divertido</h2>
         </div>
     </section>
+    <section class="reservas r1">
+        <div class="info">
+            <h1>Servicio B&aacute;sico</h1>
+            <h2>6 horas</h2>
+            <h3>Cuenta con lugar (precio), las mesas, sillas, freezer, <br> heladera, vitrina, horno pizzero, cocina, &aacute;rea protegida <br> (ERI) y limpieza.</h3>
+        </div>
+        <div class="precio">
+            <h1>$40.000</h1>
+            <a href="#">Reservar</a>
+        </div>
+    </section>
 </body>
 </html>
