--- a/index.html
+++ b/index.html
@@ -39,5 +39,17 @@
             <a href="#">Reservar</a>
         </div>
     </section>
+    <section class="reservas r2">
+        <div class="info">
+            <h1>Servicio Semi Completo</h1>
+            <h2>4 horas x 30 personas</h2>
+            <h3>Cuenta con Servicio B&aacute;sico + mesa de bienvenida salada y dulce, <br>comida (sandwich de miga, pebetes, pizzas caceras y empanadas, <br> linea de bebidas de coca cola y decoraci&oacute;n tem&aacute;tica a elecci&oacute;n</h3>
+            <h3>Se cobra por adicional ($2500)</h3>
+        </div>
+        <div class="precio">
+            <h1>$75.000</h1>
+            <a href="#">Reservar</a>
+        </div>
+    </section>
 </body>
 </html>
