--- a/index.html
+++ b/index.html
@@ -51,5 +51,22 @@
             <a href="#">Reservar</a>
         </div>
     </section>
+    <section class="reservas r3">
+        <div class="info">
+            <h1>Servicio Completo o Pleno</h1>
+            <h2>4 horas x 30 personas</h2>
+            <h3>Cuenta con servicio semi completo + torta, piñata u sorpresas <br> de la tem&aacute;tica del evento</h3>
+            <h3>Se cobra por adicional ($3500)</h3>
+        </div>
+        <div class="precio">
+            <h1>$110.000</h1>
+            <a href="#">Reservar</a>
+        </div>
+    </section>
+    <footer>
+        <div id="ubicacion"></div>
+        <div id="contacto"></div>
+        <div id="pago"></div>
+    </footer>
 </body>
 </html>
