agregado footer basico

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
         <div id="logo">
-            <img src="" alt="">
+            <img src="imagenes/logochamkitos4.png" alt="">
         </div>
     </header>
     <section id="inicio">
@@ -64,9 +64,19 @@
         </div>
     </section>
     <footer>
-        <div id="ubicacion"></div>
-        <div id="contacto"></div>
-        <div id="pago"></div>
+        <div class="datos" id="ubicacion">
+            <h1>Nuestra <br> Ubicaci&oacute;n</h1>
+            <h1> Avenida Ramirez <br> de velazco Km 3.5</h1>
+            <div id="maps"><a href="#"><img src="imagenes/ubiacion.jpg" alt=""></a></div>
+        </div>
+        <div class="datos" id="contacto">
+            <h1>Cont&aacute;ctanos</h1>
+            <h1>Cel: 038044527761 <br> Tel: 4452360</h1>
+        </div>
+        <div class="datos" id="pago">
+            <h1>Formas de <br> Pago</h1>
+            <h1>-Mercado Pago <br>-Tarjeta de Debito <br>-Efectivo o transferencia</h1>
+        </div>
     </footer>
 </body>
 </html>
