--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
             <h1>Formas de <br> Pago</h1>
             <h1>-Mercado Pago <br>-Tarjeta de Debito <br>-Efectivo o transferencia</h1>
         </div>
+        <h1 id="equipo">Equipo Desarrollador</h1>
+        <div id="integrantes">
+            <div class="alumnos" id="diseñador"></div>
+            <div class="alumnos" id="desarrollador"></div>
+        </div>
     </footer>
 </body>
 </html>
