--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/068337eaff.js" crossorigin="anonymous"></script>
     <title>Chamakitos Park</title>
 </head>
 <body>
@@ -81,6 +82,14 @@
         <div id="integrantes">
             <div class="alumnos" id="diseñador"></div>
             <div class="alumnos" id="desarrollador"></div>
+        </div>
+        <div id="copy">
+            <div>
+                <h2>Seguinos en nuestras redes <a href="#" class="fa-brands fa-square-instagram"></a> <a href="#" class="fa-brands fa-square-facebook"></a></h2>
+            </div>
+            <div>
+                <h2><i class="fa-solid fa-copyright"></i> 2023 CopyRight ChamakitosPark</h2>
+            </div>
         </div>
     </footer>
 </body>
