--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/068337eaff.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100&display=swap" rel="stylesheet">
     <title>Chamakitos Park</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
     <section id="inicio">
         <div id="titulo">
             <h1>Sal&oacute;n de Eventos</h1>
-            <h3>Aunt&eacute;nticamente <br> Mexicano, natural <br>
+            <h3>Aunt&eacute;nticamente Mexicano, natural
             y divertido</h2>
         </div>
     </section>
