--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Preahvihear&display=swap" rel="stylesheet">
     <title>Chamakitos Park</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
                 <li><a href="#">INICIO</a></li>
                 <li><a href="#">SERVICIOS</a></li>
                 <li><a href="#">UBICACI&Oacute;N</a></li>
-                <li><a href="#">CONTACTO</a></li>
+                <li><a href="#">CONSULTA</a></li>
                 <li><a href="#">CALIF&Iacute;CANOS</a></li>
             </ul>
         </nav>
@@ -36,7 +37,7 @@
         <div class="info">
             <h1>Servicio B&aacute;sico</h1>
             <h2>6 horas</h2>
-            <h3>Cuenta con lugar (precio), las mesas, sillas, freezer, <br> heladera, vitrina, horno pizzero, cocina, &aacute;rea protegida <br> (ERI) y limpieza.</h3>
+            <h3>Cuenta con lugar (predio), las mesas, sillas, freezer, <br> heladera vitrina, horno pizzero, cocina, &aacute;rea protegida <br> (ERI) y limpieza.</h3>
         </div>
         <div class="precio">
             <h1>$40.000</h1>
@@ -44,11 +45,10 @@
         </div>
     </section>
     <section class="reservas r2">
-        <div class="info">
+        <div class="info i2">
             <h1>Servicio Semi Completo</h1>
             <h2>4 horas x 30 personas</h2>
-            <h3>Cuenta con Servicio B&aacute;sico + mesa de bienvenida salada y dulce, <br>comida (sandwich de miga, pebetes, pizzas caceras y empanadas, <br> linea de bebidas de coca cola y decoraci&oacute;n tem&aacute;tica a elecci&oacute;n</h3>
-            <h3>Se cobra por adicional ($2500)</h3>
+            <h3>Cuenta con Servicio B&aacute;sico + mesa de bienvenida salada y dulce, comida (sandwich de miga, pebetes, pizzas caceras y empanadas,  linea de bebidas de coca cola y decoraci&oacute;n tem&aacute;tica a elecci&oacute;n <br>Se cobra por adicional ($2500)</h3>
         </div>
         <div class="precio">
             <h1>$75.000</h1>
