--- a/index.html
+++ b/index.html
@@ -69,13 +69,15 @@
     </section>
     <footer>
         <div class="datos" id="ubicacion">
-            <h1>Nuestra <br> Ubicaci&oacute;n</h1>
-            <h1> Avenida Ramirez <br> de velazco Km 3.5</h1>
-            <div id="maps"><a href="#"><img src="imagenes/ubiacion.jpg" alt=""></a></div>
+            <h1>Nuestra  Ubicaci&oacute;n</h1>
+            <h1> Avenida Ramirez  de velazco Km 3.5</h1>
+            <div id="maps"><a href="https://www.google.com.ar/maps/@-29.4087881,-66.8868943,3a,75y,176.36h,76.04t/data=!3m6!1e1!3m4!1scCR8zqwYeZwhD80o4U6WCQ!2e0!7i16384!8i8192?entry=ttu" target="_blank"><img src="imagenes/ubiacion.jpg" alt=""></a></div>
         </div>
         <div class="datos" id="contacto">
             <h1>Cont&aacute;ctanos</h1>
             <h1>Cel: 038044527761 <br> Tel: 4452360</h1>
+            <h1>Email: zorychamakitos@gmail.com</h1>
+            <a href="#" class="fa-brands fa-square-whatsapp" id="whatsapp"></a>
         </div>
         <div class="datos" id="pago">
             <h1>Formas de <br> Pago</h1>
@@ -83,8 +85,24 @@
         </div>
         <h1 id="equipo">Equipo Desarrollador</h1>
         <div id="integrantes">
-            <div class="alumnos" id="diseñador"></div>
-            <div class="alumnos" id="desarrollador"></div>
+            <div class="alumnos" id="diseñador">
+                <div class="foto">
+                    <img src="" alt="">
+                </div>
+                <div class="texto">
+                    <h1>Diseñador Web</h1>
+                    <h2>Demmy Gonz&aacute;lez</h2>
+                </div>
+            </div>
+            <div class="alumnos" id="desarrollador">
+                <div class="foto">
+                    <img src="" alt="">
+                </div>
+                <div class="texto">
+                    <h1>Programador Web</h1>
+                    <h2>Nahuel Garcia</h2>
+                </div>
+            </div>
         </div>
         <div id="copy">
             <div>
