--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">INICIO</a></li>
-                <li><a href="#">SERVICIOS</a></li>
-                <li><a href="#">UBICACI&Oacute;N</a></li>
+                <li><a href="#inicio">INICIO</a></li>
+                <li><a href="#service">SERVICIOS</a></li>
+                <li><a href="#ubicacion">UBICACI&Oacute;N</a></li>
                 <li><a href="#">CONSULTA</a></li>
                 <li><a href="#">CALIF&Iacute;CANOS</a></li>
             </ul>
@@ -29,11 +29,11 @@
     <section id="inicio">
         <div id="titulo">
             <h1>Sal&oacute;n de Eventos</h1>
-            <h3>Aunt&eacute;nticamente Mexicano, natural
+            <h3>Aunt&eacute;nticamente mexicano, natural
             y divertido</h2>
         </div>
     </section>
-    <section class="reservas r1">
+    <section id="service" class="reservas r1">
         <div class="info">
             <h1>Servicio B&aacute;sico</h1>
             <h2>6 horas</h2>
