--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <li><a href="#inicio">INICIO</a></li>
                 <li><a href="#service">SERVICIOS</a></li>
                 <li><a href="#ubicacion">UBICACI&Oacute;N</a></li>
-                <li><a href="#">CONSULTA</a></li>
+                <li><a href="index2.html">CONSULTA</a></li>
                 <li><a href="#">CALIF&Iacute;CANOS</a></li>
             </ul>
         </nav>
         <div id="logo">
-            <img src="imagenes/logochamkitos4.png" alt="">
+            <img src="imagenes/logochamkitos7.png" alt="">
         </div>
     </header>
     <section id="inicio">
@@ -67,7 +67,7 @@
             <a href="#">Reservar</a>
         </div>
     </section>
-    <footer>
+    <footer id="footer1">
         <div class="datos" id="ubicacion">
             <h1>Nuestra  Ubicaci&oacute;n</h1>
             <h1> Avenida Ramirez  de velazco Km 3.5</h1>
