--- a/index2.html
+++ b/index2.html
@@ -11,20 +11,76 @@
     <link href="https://fonts.googleapis.com/css2?family=Preahvihear&display=swap" rel="stylesheet">
     <title>Reservar</title>
 </head>
-<body>
+<body id="bodyindex2">
     <header>
         <nav>
             <ul>
-                <li><a href="#inicio">INICIO</a></li>
-                <li><a href="#service">SERVICIOS</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="index.html #service">SERVICIOS</a></li>
                 <li><a href="#ubicacion">UBICACI&Oacute;N</a></li>
                 <li><a href="#">CONSULTA</a></li>
                 <li><a href="#">CALIF&Iacute;CANOS</a></li>
             </ul>
         </nav>
         <div id="logo">
-            <img src="imagenes/logochamkitos4.png" alt="">
+            <img src="imagenes/logochamkitos7.png" alt="">
         </div>
     </header>
+    <section id="contenedor">
+        <div id="invisible">
+            <div id="titulo2">
+                <h1>Reserva</h1>
+            </div>
+            <div class="cuadro c2">
+                <input type="text" placeholder="Nombre y Apellido">
+                <input type="text" placeholder="N&uacute;mero de Contacto">
+                <input type="text" placeholder="Fecha del Evento">
+                <select name="" id="" value="">
+                    <option value="">Servicio a contratar</option>
+                    <option value="">Servicio B&aacute;sico</option>
+                    <option value="">Servicio Semi-Completo</option>
+                    <option value="">Servicio Pleno</option>
+                </select>
+                <select name="" id="" value="">
+                    <option value="">Horario</option>
+                    <option value="">8 - 12hs</option>
+                    <option value="">13 - 17hs</option>
+                    <option value="">18 - 22hs</option>
+                    <option value="">23 - 3hs</option>
+                </select>
+                <select name="" id="">
+                    <option value="">Cantidad de personas</option>
+                    <option value="">-30 personas</option>
+                    <option value="">30 personas</option>
+                    <option value="">de 30 a 100 personas</option>
+                    <option value="">+ de 100 personas</option>
+                </select>
+            </div>
+            <div class="cuadro c3">
+                <h1>Tipo de Evento</h1> <br>
+                <input type="radio" id="infantil" name="evento"><label for="infantil">Fiesta Infantil</label> <br>
+                <input type="radio" id="bautismo" name="evento"><label for="bautismo">Bautismo / Comuni&oacute;n</label> <br>
+                <input type="radio" id="Boda" name="evento"><label for="Boda">Boda</label> <br>
+                <input type="radio" id="despedida" name="evento"><label for="despedida">Despedida de soltero</label> <br>
+                <input type="radio" id="aniversario" name="evento"><label for="aniversario">Aniversario</label> <br>
+                <input type="radio" id="anos" name="evento"><label for="anos">15 Años</label> <br>
+                <input type="radio" id="otro" name="evento"><label for="otro">Otro</label><br>
+                <textarea placeholder="Otras consultas..." name="" id="" cols="32" rows="7"></textarea>
+            </div>
+            <div id="enviar">
+                <input type="submit">
+            </div>
+        </div>
+    </section>
+    <footer id="footer2">
+        <div id="copy">
+            <div>
+                <h2>Seguinos en nuestras redes <a href="#" class="fa-brands fa-square-instagram"></a> <a href="#" class="fa-brands fa-square-facebook"></a></h2>
+            </div>
+            <div>
+                <h2><i class="fa-solid fa-copyright"></i> 2023 CopyRight ChamakitosPark</h2>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
