--- a/index2.html
+++ b/index2.html
@@ -16,8 +16,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">INICIO</a></li>
-                <li><a href="index.html #service">SERVICIOS</a></li>
-                <li><a href="#ubicacion">UBICACI&Oacute;N</a></li>
+                <li><a href="index.html#service">SERVICIOS</a></li>
+                <li><a href="index.html#ubicacion">UBICACI&Oacute;N</a></li>
                 <li><a href="#">CONSULTA</a></li>
                 <li><a href="#">CALIF&Iacute;CANOS</a></li>
             </ul>
