--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="inicio">
         <div id="titulo">
             <h1>Sal&oacute;n de Eventos</h1>
-            <h3>Aunt&eacute;nticamente mexicano, natural
+            <h3>Aut&eacute;nticamente mexicano, natural
             y divertido</h2>
         </div>
     </section>
@@ -59,7 +59,7 @@
         <div class="info">
             <h1>Servicio Completo o Pleno</h1>
             <h2>4 horas x 30 personas</h2>
-            <h3>Cuenta con servicio semi completo + torta, piñata u sorpresas <br> de la tem&aacute;tica del evento</h3>
+            <h3>Cuenta con servicio semi completo + torta, piñata y sorpresas <br> de la tem&aacute;tica del evento</h3>
             <h3>Se cobra por adicional ($3500)</h3>
         </div>
         <div class="precio">
