--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
             <img src="imagenes/logochamkitos7.png" alt="">
         </div>
     </header>
-    <section id="contenedor">
+    <section class="contenedor">
         <div id="invisible">
             <div id="titulo2">
                 <h1>Reserva</h1>
@@ -50,10 +50,10 @@
                 </select>
                 <select name="" id="">
                     <option value="">Cantidad de personas</option>
-                    <option value="">-30 personas</option>
+                    <option value="">Menos de 30 Personas</option>
                     <option value="">30 personas</option>
                     <option value="">de 30 a 100 personas</option>
-                    <option value="">+ de 100 personas</option>
+                    <option value="">M&aacute;s de 100 personas</option>
                 </select>
             </div>
             <div class="cuadro c3">
@@ -65,7 +65,7 @@
                 <input type="radio" id="aniversario" name="evento"><label for="aniversario">Aniversario</label> <br>
                 <input type="radio" id="anos" name="evento"><label for="anos">15 Años</label> <br>
                 <input type="radio" id="otro" name="evento"><label for="otro">Otro</label><br>
-                <textarea placeholder="Otras consultas..." name="" id="" cols="32" rows="7"></textarea>
+                <textarea placeholder="Otras consultas..." name="" id="" cols="32" rows="6"></textarea>
             </div>
             <div id="enviar">
                 <input type="submit">
