--- a/index3.html
+++ b/index3.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="index.html#service">SERVICIOS</a></li>
                 <li><a href="index.html#ubicacion">UBICACI&Oacute;N</a></li>
-                <li><a href="#">CONSULTA</a></li>
+                <li><a href="index2.html">CONSULTA</a></li>
                 <li><a href="#">CALIF&Iacute;CANOS</a></li>
             </ul>
         </nav>
@@ -28,11 +28,60 @@
     </header>
     <section class="contenedor cont2">
         <div id="invisible2">
-            <div id="titulo3"></div>
-            <div class="cuadro2"></div>
-            <div class="cuadro2"></div>
-            <div id="enviar2"></div>
-        </div>
+            <div id="titulo3">
+                <h1>Califica nuestros servicios <br> Tu opini&oacute;n nos ayuda a mejorar</h1>
+            </div>
+                <div class="cuadro2">
+                    <form action="">
+                        <label for="" class="pregunta">¿Qu&eacute; le pareci&oacute; el sal&oacute;n?</label><br> <br>
+                        <input type="radio" id="exc" name="encuesta1"><label for="exc">Excelente</label><br>
+                        <input type="radio" id="bueno" name="encuesta1"><label for="bueno">Muy bueno</label><br>
+                        <input type="radio" id="regular" name="encuesta1"><label for="regular">Regular</label><br>
+                        <input type="radio" id="malo" name="encuesta1"><label for="malo">Malo</label><br>
+                        <input type="radio" id="muymalo" name="encuesta1"><label for="muymalo">Muy malo</label> <br> <br>
+                        <label for="" class="pregunta">¿Qu&eacute; le pareci&oacute; el servicio?</label><br> <br>
+                        <input name="encuesta2" type="radio" id="muy"><label for="muy">Muy bueno</label><br>
+                        <input name="encuesta2" type="radio" id="bueno2"><label for="bueno2">Bueno</label><br>
+                        <input name="encuesta2" type="radio" id="regu"><label for="regu">Regular</label><br>
+                        <input name="encuesta2" type="radio" id="malo2"><label for="malo2">Malo</label> <br> <br>
+                </div>
+                <div class="cuadro2 cuadroderecho">
+                    <label for="" class="pregunta">¿Qu&eacute; servicio contrataste?</label><br> <br>
+                        <input type="radio" id="basico" name="encuesta1"><label for="basico">B&aacute;sico</label><br>
+                        <input type="radio" id="semi" name="encuesta1"><label for="semi">Semi completo</label><br>
+                        <input type="radio" id="pleno" name="encuesta1"><label for="pleno">Completo o pleno</label><br>
+                        <select name="" class="select s2">
+                            <option value="">Califica la limpieza</option>
+                            <option value="">Muy buena</option>
+                            <option value="">Buena</option>
+                            <option value="">Regular</option>
+                            <option value="">Puede mejorar</option>
+                        </select>
+                        <select name="" class="select s2">
+                            <option value="">Califica la atenci&oacute;n del personal</option>
+                            <option value="">Muy atentos y serviciales</option>
+                            <option value="">Atentos</option>
+                            <option value="">Poco atentos y serviciales</option>
+                        </select>
+                </div>
+                <div id="text">
+                    <label for="" class="pregunta">¿Qu&eacute; es lo que m&aacute;s te gust&oacute; y qu&eacute; cambiar&iacute;as o mejorar&iacute;as?</label><br> <br>
+                    <textarea name="" id="tarea" cols="70" rows="5"></textarea>
+                </div>
+                    <div id="enviar">
+                        <input type="submit">
+                    </div>
+            </form>
     </section>
+    <footer id="footer2">
+        <div id="copy">
+            <div>
+                <h2>Seguinos en nuestras redes <a href="#" class="fa-brands fa-square-instagram"></a> <a href="#" class="fa-brands fa-square-facebook"></a></h2>
+            </div>
+            <div>
+                <h2><a class="fa-solid fa-copyright"></a> 2023 CopyRight ChamakitosPark</h2>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
