--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#service">SERVICIOS</a></li>
                 <li><a href="#ubicacion">UBICACI&Oacute;N</a></li>
                 <li><a href="index2.html">CONSULTA</a></li>
-                <li><a href="#">CALIF&Iacute;CANOS</a></li>
+                <li><a href="index3.html">CALIF&Iacute;CANOS</a></li>
             </ul>
         </nav>
         <div id="logo">
@@ -109,7 +109,7 @@
                 <h2>Seguinos en nuestras redes <a href="#" class="fa-brands fa-square-instagram"></a> <a href="#" class="fa-brands fa-square-facebook"></a></h2>
             </div>
             <div>
-                <h2><i class="fa-solid fa-copyright"></i> 2023 CopyRight ChamakitosPark</h2>
+                <h2><a class="fa-solid fa-copyright"></a> 2023 CopyRight ChamakitosPark</h2>
             </div>
         </div>
     </footer>
