--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div id="integrantes">
             <div class="alumnos" id="diseñador">
                 <div class="foto">
-                    <img src="" alt="">
+                    <img src="imagenes/demmy.jpeg" alt="">
                 </div>
                 <div class="texto">
                     <h1>Diseñador Web</h1>
@@ -96,7 +96,7 @@
             </div>
             <div class="alumnos" id="desarrollador">
                 <div class="foto">
-                    <img src="" alt="">
+                    <img src="imagenes/nahuel.jpg" alt="">
                 </div>
                 <div class="texto">
                     <h1>Programador Web</h1>
