--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
             <h1>Formas de <br> Pago</h1>
             <h1>-Mercado Pago <br>-Tarjeta de Debito <br>-Efectivo o transferencia</h1>
         </div>
-        <h1 id="equipo">Equipo Desarrollador</h1>
+        <div id="equipo">
+            <h1>Equipo Desarrollador</h1>
+        </div>
         <div id="integrantes">
             <div class="alumnos" id="diseñador">
                 <div class="foto">
