--- a/consulta.html
+++ b/consulta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/068337eaff.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,11 +19,11 @@
                 <li><a href="index.html#service">SERVICIOS</a></li>
                 <li><a href="index.html#ubicacion">UBICACI&Oacute;N</a></li>
                 <li><a href="#">CONSULTA</a></li>
-                <li><a href="index3.html">CALIF&Iacute;CANOS</a></li>
+                <li><a href="encuesta.html">CALIF&Iacute;CANOS</a></li>
             </ul>
         </nav>
         <div id="logo">
-            <img src="imagenes/logochamkitos7.png" alt="">
+            <img src="/imagenes/logochamkitos7.png" alt="">
         </div>
     </header>
     <section class="contenedor">
