--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/068337eaff.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,8 +18,8 @@
                 <li><a href="#inicio">INICIO</a></li>
                 <li><a href="#service">SERVICIOS</a></li>
                 <li><a href="#ubicacion">UBICACI&Oacute;N</a></li>
-                <li><a href="index2.html">CONSULTA</a></li>
-                <li><a href="index3.html">CALIF&Iacute;CANOS</a></li>
+                <li><a href="consulta.html">CONSULTA</a></li>
+                <li><a href="encuesta.html">CALIF&Iacute;CANOS</a></li>
             </ul>
         </nav>
         <div id="logo">
@@ -71,7 +71,7 @@
         <div class="datos" id="ubicacion">
             <h1>Nuestra  Ubicaci&oacute;n</h1>
             <h1> Avenida Ramirez  de velazco Km 3.5</h1>
-            <div id="maps"><a href="https://www.google.com.ar/maps/@-29.4087881,-66.8868943,3a,75y,176.36h,76.04t/data=!3m6!1e1!3m4!1scCR8zqwYeZwhD80o4U6WCQ!2e0!7i16384!8i8192?entry=ttu" target="_blank"><img src="imagenes/ubiacion.jpg" alt=""></a></div>
+            <div id="maps"><a href="https://www.google.com.ar/maps/@-29.4087881,-66.8868943,3a,75y,176.36h,76.04t/data=!3m6!1e1!3m4!1scCR8zqwYeZwhD80o4U6WCQ!2e0!7i16384!8i8192?entry=ttu" target="_blank"><img src="/imagenes/ubiacion.jpg" alt=""></a></div>
         </div>
         <div class="datos" id="contacto">
             <h1>Cont&aacute;ctanos</h1>
@@ -89,7 +89,7 @@
         <div id="integrantes">
             <div class="alumnos" id="diseñador">
                 <div class="foto">
-                    <img src="imagenes/demmy.jpeg" alt="">
+                    <img src="/imagenes/demmy.jpeg" alt="">
                 </div>
                 <div class="texto">
                     <h1>Diseñador Web</h1>
@@ -98,7 +98,7 @@
             </div>
             <div class="alumnos" id="desarrollador">
                 <div class="foto">
-                    <img src="imagenes/nahuel.jpg" alt="">
+                    <img src="/imagenes/nahuel.jpg" alt="">
                 </div>
                 <div class="texto">
                     <h1>Programador Web</h1>
