arreglado problemas de imagenes v3

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="datos" id="ubicacion">
             <h1>Nuestra  Ubicaci&oacute;n</h1>
             <h1> Avenida Ramirez  de velazco Km 3.5</h1>
-            <div id="maps"><a href="https://www.google.com.ar/maps/@-29.4087881,-66.8868943,3a,75y,176.36h,76.04t/data=!3m6!1e1!3m4!1scCR8zqwYeZwhD80o4U6WCQ!2e0!7i16384!8i8192?entry=ttu" target="_blank"><img src="../imagenes/ubiacion.jpg" alt=""></a></div>
+            <div id="maps"><a href="https://www.google.com.ar/maps/@-29.4087881,-66.8868943,3a,75y,176.36h,76.04t/data=!3m6!1e1!3m4!1scCR8zqwYeZwhD80o4U6WCQ!2e0!7i16384!8i8192?entry=ttu" target="_blank"><img src="imagenes/ubiacion.jpg" alt=""></a></div>
         </div>
         <div class="datos" id="contacto">
             <h1>Cont&aacute;ctanos</h1>
@@ -89,7 +89,7 @@
         <div id="integrantes">
             <div class="alumnos" id="diseñador">
                 <div class="foto">
-                    <img src="../imagenes/demmy.jpeg" alt="">
+                    <img src="imagenes/demmy.jpeg" alt="">
                 </div>
                 <div class="texto">
                     <h1>Diseñador Web</h1>
@@ -98,7 +98,7 @@
             </div>
             <div class="alumnos" id="desarrollador">
                 <div class="foto">
-                    <img src="../imagenes/nahuel.jpg" alt="">
+                    <img src="imagenes/nahuel.jpg" alt="">
                 </div>
                 <div class="texto">
                     <h1>Programador Web</h1>
