--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="precio">
             <h1>$40.000</h1>
-            <a href="index2.html">Reservar</a>
+            <a href="consulta.html">Reservar</a>
         </div>
     </section>
     <section class="reservas r2">
@@ -52,7 +52,7 @@
         </div>
         <div class="precio">
             <h1>$75.000</h1>
-            <a href="index2.html">Reservar</a>
+            <a href="consulta.html">Reservar</a>
         </div>
     </section>
     <section class="reservas r3">
@@ -64,7 +64,7 @@
         </div>
         <div class="precio">
             <h1>$110.000</h1>
-            <a href="index2.html">Reservar</a>
+            <a href="consulta.html">Reservar</a>
         </div>
     </section>
     <footer id="footer1">
